Fixing nav bar spacing

--- a/src/index.css
+++ b/src/index.css
@@ -54,5 +54,5 @@ i {
 .material-icons.md-48 { font-size: 48px; }
 
 .middle-nav {
-  padding-left: 450px;
+  padding-left: 400px;
 }
